--- a/src/Spryker/Category/data/translation/Zed/en_US.csv
+++ b/src/Spryker/Category/data/translation/Zed/en_US.csv
@@ -25,8 +25,8 @@ Inactive,Inactive
 no,No
 "Not in Menu","Not in Menu"
 "Please make sure required fields are properly filled in","Please make sure required fields are properly filled in"
-"Re-sort Child Categories","Re-sort Child Categories"
-"Re-sort child-categories","Re-sort child-categories"
+"Re-sort Child Categories","Re-sort child categories"
+"Re-sort child-categories","Re-sort child categories"
 "Root nodes list","Root nodes list"
 Save,Save
 "Save Order","Save Order"
