--- a/src/Spryker/CmsBlockGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CmsBlockGui/data/translation/Zed/de_DE.csv
@@ -1,10 +1,10 @@
+Approved,Bestätigt
 "Back to CMS","Zurück zu CMS"
 "Back to list","Zurück zu Liste"
 "Block Id",Block-ID
 "Block Id",Block-ID
 Blocks,Blöcke
 "Categories: bottom","Kategorien: unten"
-"Categories: middle","Kategorien: Mitte"
 "Categories: top","Kategorien: oben"
 "Category list",Kategorieliste
 "CMS Block",CMS-Block
@@ -34,7 +34,7 @@ Save,Speichern
 "Selected template doesn't exist anymore","Die ausgewählte Vorlage existiert nicht mehr."
 "Selected template doesn't exist anymore","Die ausgewählte Vorlage existiert nicht mehr."
 "Selected template doesn't exist anymore.","Die ausgewählte Vorlage existiert nicht mehr."
-"Store relation",Shoprelation
+"Store relation","Store relation"
 Template,Vorlage
 Template:,Vorlage:
 "Translation key:",Übersetzungs-Key:
