--- a/src/Spryker/CompanyGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CompanyGui/data/translation/Zed/de_DE.csv
@@ -6,14 +6,14 @@ Approved,Bestätigt
 "Company has been created.","Unternehmen wurde erstellt."
 "Company has been deactivated.","Unternehmen wurde deaktiviert."
 "Company has been denied.","Unternehmen wurde abgelehnt."
-"Company has been updated.","Unternehmen wurde aktualisiert."
-"Company has not been created.","Unternehmen wurde nicht erstellt."
-"Company has not been updated.","Unternehmen wurde nicht aktualisiert."
-"Company Id","ID des Unternehmens"
-"Create Company","Unternehmen erstellen"
+"Company has been updated.","Firma wurde aktualisiert"
+"Company has not been created.","Firma wurde nicht erstellt."
+"Company has not been updated.","Firma wurde nicht aktualisiert."
+"Company Id",Firmen-ID
+"Create Company","Firma erstellen"
 Denied,Abgelehnt
 Deny,Ablehnen
-"Edit Company","Unternehmen bearbeiten"
+"Edit Company","Firma bearbeiten"
 "List of Companies","Liste der Firmen"
 "Overview of Companies","Übersicht der Firmen"
 Save,Speichern
