--- a/src/Spryker/CompanyRoleGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/CompanyRoleGui/data/translation/Zed/en_US.csv
@@ -1,4 +1,4 @@
-"Add Company Role","Add Company Role"
+"Add Company Role","Add company user role"
 "Assigned Permissions","Assigned Permissions"
 "Assigned Roles","Assigned Roles"
 "Company Account","Company Account"
