--- a/src/Spryker/Customer/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Customer/data/translation/Zed/de_DE.csv
@@ -34,7 +34,7 @@ Phone,Telefon
 "Registered at","Eingetragen bei"
 Salutation,Anrede
 Save,Speichern
-"Select one",Einfachauswahl
+"Select one","Eins auswählen"
 "Send password token through email","Passwort-Token per E-Mail senden"
 "Send password token through email","Passwort-Token per E-Mail senden"
 View,Ansicht
