--- a/src/Spryker/CustomerAccessGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CustomerAccessGui/data/translation/Zed/de_DE.csv
@@ -1,6 +1,6 @@
 "Customer Access",Kundenzugang
 "Hide the following information from not logged in users:","Folgenden Informationen für nicht angemeldete Benutzer verbergen:"
-"Not logged in customer accessible content has been successfully updated.","Der für nicht eingeloggte Kunden zugängliche Inhalt wurde erfolgreich aktualisiert."
-order-place-submit,"Bestellung aufgeben-absenden"
+"Not logged in customer accessible content has been successfully updated.","Inhalte für nicht eingeloggte Kunden wurde aktualisiert"
+order-place-submit,"Kann eine Bestellung aufgeben"
 Save,Speichern
 shopping-list,Einkaufsliste
