--- a/src/Spryker/Dataset/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Dataset/data/translation/Zed/de_DE.csv
@@ -1,7 +1,7 @@
 "Add a Dataset","Datensatz hinzufügen"
 "Add Dataset","Datensatz hinzufügen"
 "Back to Dataset list","Zurück zu Datensatzliste"
-"Content file",Inhaltsdatei
+"Content file","Content file"
 "Dataset was activated successfully.","Datensatz wurde erfolgreich aktiviert."
 "Dataset was deactivated successfully.","Datensatz wurde erfolgreich deaktiviert."
 "Edit Dataset","Datensatz bearbeiten"
