--- a/src/Spryker/MerchantRelationshipGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/MerchantRelationshipGui/data/translation/Zed/de_DE.csv
@@ -1,11 +1,11 @@
 "Add Merchant relation","Händlerbeziehung hinzufügen"
 "Assigned Business Units","Zugewiesene Business Units"
 "Back to Merchant relations","Zurück zu Handelsbeziehungen"
-"Business Unit Owner","Inhaber der Business Unit"
+"Business Unit Owner","Inhaber der Geschäftseinheit"
 Company,Firma
 Confirm,bestätigt
 "Create Merchant Relation","Händlerbeziehung erstellen"
-"Edit Merchant Relation","Händlerrelation bearbeiten"
+"Edit Merchant Relation","Händlerbeziehung bearbeiten"
 "Edit Merchant Relation:","Händlerbeziehung bearbeiten:"
 "List of Merchant relation","Liste der Händlerbeziehungen"
 Merchant,Händler
