--- a/src/Spryker/MerchantRelationshipSalesOrderThresholdGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/MerchantRelationshipSalesOrderThresholdGui/data/translation/Zed/de_DE.csv
@@ -11,5 +11,5 @@ Save,Speichern
 "Soft Threshold with flexible fee","Weicher Grenzwert mit flexibler Gebühr"
 "Soft Threshold with message","Weicher Grenzwert mit Nachricht"
 "Store and Currency","Shop und Währung"
-"The Merchant Relationship Threshold is saved successfully.","Der Grenzwert der Händlerrelation wurde erfolgreich gespeichert."
+"The Merchant Relationship Threshold is saved successfully.","Der Grenzwert der Händlerbeziehung wurde erfolgreich gespeichert."
 Thresholds,Grenzwerte
