--- a/src/Spryker/ProductPackagingUnitGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductPackagingUnitGui/data/translation/Zed/de_DE.csv
@@ -1,7 +1,7 @@
 "Back to Packaging Types","Zurück zu Verpackungsarten"
 "Create Packaging Type","Verpackungsart erstellen"
 "Edit Packaging Type","Verpackungsart bearbeiten"
-Key,Schlüssel
+Key,Key
 "List of Packaging Types","Liste der Verpackungsarten"
 "Overview of Packaging Types","Übersicht der Verpackungsarten"
 "Packaging Type details","Details der Verpackungsart"
