--- a/src/Spryker/ProductReviewGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductReviewGui/data/translation/Zed/de_DE.csv
@@ -1,7 +1,7 @@
 Approve,Bestätigen
 "Change status","Status ändern"
 "List of product reviews","Liste der Produktbewertungen"
-Nickname,Nickname
+Nickname,Spitzname
 "Overview of Product Reviews","Übersicht der Produktbewertungen"
 "Product Reviews",Produktbewertungen
-Reject,Abweisen
+Reject,Ablehnen
