--- a/src/Spryker/SprykGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/SprykGui/data/translation/Zed/en_US.csv
@@ -138,16 +138,16 @@
 "Adds a new *module*PersistenceFactory to the Zed application.","Adds a new *module*PersistenceFactory to the Zed application."
 "Adds a new *module*Repository to the Zed application.","Adds a new *module*Repository to the Zed application."
 "Adds a new *module*RepositoryInterface to the Zed application.","Adds a new *module*RepositoryInterface to the Zed application."
-"Adds a new *module*To*dependentModule*ClientBridge.","Adds a new *module*To*dependentModule*ClientBridge."
-"Adds a new *module*To*dependentModule*ClientBridge.","Adds a new *module*To*dependentModule*ClientBridge."
-"Adds a new *module*To*dependentModule*ClientInterface.","Adds a new *module*To*dependentModule*ClientInterface."
-"Adds a new *module*To*dependentModule*ClientInterface.","Adds a new *module*To*dependentModule*ClientInterface."
-"Adds a new *module*To*dependentModule*FacadeBridge.","Adds a new *module*To*dependentModule*FacadeBridge."
-"Adds a new *module*To*dependentModule*FacadeInterface.","Adds a new *module*To*dependentModule*FacadeInterface."
-"Adds a new *module*To*dependentModule*ServiceBridge.","Adds a new *module*To*dependentModule*ServiceBridge."
-"Adds a new *module*To*dependentModule*ServiceBridge.","Adds a new *module*To*dependentModule*ServiceBridge."
-"Adds a new *module*To*dependentModule*ServiceInterface.","Adds a new *module*To*dependentModule*ServiceInterface."
-"Adds a new *module*To*dependentModule*ServiceInterface.","Adds a new *module*To*dependentModule*ServiceInterface."
+"Adds a new *module*To*dependentModule*ClientBridge.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*ClientBridge.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*ClientInterface.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*ClientInterface.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*FacadeBridge.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*FacadeInterface.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*ServiceBridge.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*ServiceBridge.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*ServiceInterface.","Adds a new *module*RepositoryInterface to the Zed application."
+"Adds a new *module*To*dependentModule*ServiceInterface.","Adds a new *module*RepositoryInterface to the Zed application."
 "Adds a new Abstract*tableName* class to Zed's persistence layer.","Adds a new Abstract*tableName* class to Zed's persistence layer."
 "Adds a new Abstract*tableName*Query class to Zed's persistence layer.","Adds a new Abstract*tableName*Query class to Zed's persistence layer."
 "Adds a new action to the Zed controller.","Adds a new action to the Zed controller."
@@ -212,4 +212,4 @@ Spryk,Spryk
 "Spryk ""%s"" executed successfully.","Spryk ""%s"" executed successfully."
 SprykGui,SprykGui
 "Updates the *module* test configuration and adds the suite configuration for Business tests.","Updates the *module* test configuration and adds the suite configuration for Business tests."
-Yves,Yves
+Yves,Storefront
