--- a/src/Spryker/Storage/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Storage/data/translation/Zed/de_DE.csv
@@ -1,6 +1,6 @@
 "All Keys","Alle Keys"
 "Drop timestamps","Zeitstempel entfernen"
-Key,Schlüssel
+Key,Key
 "Number of entries:","Anzahl der Einträge:"
 Storage,Speicher
 "Storage keys",Speicherschlüssel
