--- a/src/Spryker/Tax/data/translation/Zed/en_US.csv
+++ b/src/Spryker/Tax/data/translation/Zed/en_US.csv
@@ -23,7 +23,7 @@ Save,Save
 "Tax rate %d was created successfully.","Tax rate %d was created successfully."
 "Tax rate %d was deleted successfully.","Tax rate %d was deleted successfully."
 "Tax rate %d was updated successfully.","Tax rate %d was updated successfully."
-"Tax Rate deletion confirmation","Tax Rate deletion confirmation"
+"Tax Rate deletion confirmation","Tax Rate was successfully deleted"
 "Tax rate details","Tax rate details"
 "Tax rate ID","Tax rate ID"
 "Tax rate with id %s doesn't exist","Tax rate with id %s doesn't exist"
@@ -31,7 +31,7 @@ Save,Save
 "Tax rates","Tax rates"
 "Tax set %d was created successfully.","Tax set %d was created successfully."
 "Tax set %d was updated successfully.","Tax set %d was updated successfully."
-"Tax Set deletion confirmation","Tax Set deletion confirmation"
+"Tax Set deletion confirmation","Tax Set was successfully deleted"
 "Tax set details","Tax set details"
 "Tax set ID","Tax set ID"
 "Tax set is not created. Please fill-in all required fields.","Tax set is not created. Please fill-in all required fields."
