--- a/src/Spryker/Api/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Api/data/translation/Zed/de_DE.csv
@@ -1,5 +1,5 @@
 Api,API
 Documentation,Dokumentation
-Maintenance,Wartung
+Maintenance,Maintenance
 "This is a demo showcasing of the Zed REST API.","Dies ist eine Demo-Darstellung der Zed REST API."
 "Zed REST API","Zed REST API"
