--- a/src/Spryker/CompanyRoleGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CompanyRoleGui/data/translation/Zed/de_DE.csv
@@ -1,19 +1,19 @@
-"Add Company Role","Unternehmensrolle hinzufügen"
+"Add Company Role","Rolle hinzufügen"
 "Assigned Permissions","Zugewiesene Berechtigungen"
 "Assigned Roles","Zugewiesene Rollen"
-"Company Account",Unternehmensaccount
-"Company Business Unit","Business Unit des Unternehmens"
-"Company role deletion confirmation","Löschen der Unternehmensrolle bestätigt"
-"Company role deletion confirmation","Löschen der Unternehmensrolle bestätigt"
-"Company Roles",Unternehmensrollen
-"Create Company Role","Unternehmensrolle erstellen"
+"Company Account",Firmenkonto
+"Company Business Unit","Geschäftseinheit des Unternehmens"
+"Company role deletion confirmation","Löschen der Rolle bestätigt"
+"Company role deletion confirmation","Löschen der Rolle bestätigt"
+"Company Roles",Rollen
+"Create Company Role","Rolle erstellen"
 "Create role","Rolle erstellen"
-"Edit Company Role","Unternehmensrolle bearbeiten"
+"Edit Company Role","Rolle bearbeiten"
 "Is Default","Ist Standard"
 "It will be deleted from everywhere","Wird überall gelöscht"
-"List of Company Roles","Liste der Unternehmensrollen"
-"Overview of Company Roles","Übersicht der Unternehmensrollen"
-"Overview of Company Roles","Übersicht der Unternehmensrollen"
+"List of Company Roles","Liste der Rollen"
+"Overview of Company Roles","Übersicht der Rollen"
+"Overview of Company Roles","Übersicht der Rollen"
 "Role ID",Rollen-ID
 Roles,Rollen
 "Unassigned Permissions","Nicht zugewiesene Berechtigungen"
