--- a/src/Spryker/CustomerUserConnectorGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/CustomerUserConnectorGui/data/translation/Zed/de_DE.csv
@@ -2,11 +2,11 @@
 "A customer can not be assigned to multiple users at a time.","Ein Kunde kann nicht mehreren Nutzern gleichzeitig zugewiesen werden."
 Assign,Zuweisen
 "Assign Customers","Kunden zuweisen"
-"Assign Customers to User:","Nutzern Kunden zuweisen:"
+"Assign Customers to User:","Kunden einem User zuweisen"
 Assigned,Zugewiesen
 "Assigned Zed User Reference","Zugewiesene Zed-Benutzerreferenz"
 "Customer E-mail","E-Mail des Kunden"
-"Customer-user connections are updated.","Kunde-Nutzer-Verbindungen wurden aktualisiert."
+"Customer-user connections are updated.","Kunden-User Verbindungen wurden aktualisiert."
 "Customers to be assigned","Kunden zur Zuweisung"
 "Deselected customers","Aus der Auswahl entfernte Kunden"
 Female,Weiblich
