--- a/src/Spryker/Dashboard/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Dashboard/data/translation/Zed/de_DE.csv
@@ -1,3 +1,3 @@
-"Count orders","Bestellungen zählen"
+"Count orders","Anzahl der Bestellungen"
 Dashboard,Dashboard
-"Status orders",Statusbestellungen
+"Status orders","Bestellungen nach Status"
