--- a/src/Spryker/FileManagerGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/FileManagerGui/data/translation/Zed/de_DE.csv
@@ -1,14 +1,14 @@
-confirm,bestätigt
 "Add a file","Datei hinzufügen"
 "Add MIME type","MIME-Typ hinzufügen"
 "Back to File Directory Elements","Zurück zu Elementen des Dateiverzeichnisses"
 "Back to File Tree","Zurück zu Dateibaum"
 "Back to MIME type list","Zurück zu Liste der MIME-Typen"
 Cancel,Abbrechen
+confirm,bestätigt
 "Confirm deleting","Löschen bestätigen"
 "Create Directory Element","Verzeichniselement erstellen"
 "Create File Directory","Dateiverzeichnis erstellen"
-Date,Datum
+Date,date
 "Delete Directory","Verzeichnis löschen"
 "Directory element details","Details des Verzeichniselements"
 "Do you want to remove the folder with all files?","Wollen Sie den Ordner mit allen Dateien wirklich löschen?"
@@ -31,7 +31,7 @@ Date,Datum
 "MIME type was successfully saved","MIME-Type wurde erfolgreich gespeichert."
 Save,Speichern
 "Save order","Bestellung speichern"
-"Specify a file name or use real one","Dateinamen festlegen oder richtigen Namen verwenden"
+"Specify a file name or use real one","Dateinamen festlegen"
 "The file directory was added successfully.","Das Dateienverzeichnis wurde erfolgreich hinzugefügt."
 "The file was added successfully.","Die Datei wurde erfolgreich hinzugefügt."
 "The file was edited successfully.","Die Datei wurde erfolgreich bearbeitet."
