--- a/src/Spryker/ManualOrderEntryGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ManualOrderEntryGui/data/translation/Zed/de_DE.csv
@@ -3,13 +3,13 @@
 "Add Voucher","Gutschein hinzufügen"
 "Added Items","Hinzugefügte Artikel"
 "Billing address",Rechnungsadresse
-"Billing same as shipping","Rechnungsadresse wie Versandadresse"
+"Billing same as shipping","Rechnungsadresse wie Lieferadresse"
 "Create Customer","Kunde erstellen"
 "Create Order","Auftrag erstellen"
 "Customer is registered successfully.","Kunde wurde erfolgreich eingetragen."
 "Customer is registered successfully.","Kunde wurde erfolgreich eingetragen."
 Discounts,Rabatte
-"Dummy payment invoice","Rechnung mit Dummy-Zahlung"
+"Dummy payment invoice","Dummy Zahlung auf Rechnung"
 "Grand Total",Gesamtsumme
 "Invalid data provided.","Ungültige Daten angegeben."
 "Invalid data provided.","Ungültige Daten angegeben."
