--- a/src/Spryker/Oms/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Oms/data/translation/Zed/de_DE.csv
@@ -4,5 +4,5 @@ Oms,OMS
 "Order ID",Bestellungs-ID
 "process display",Prozessanzeige
 Processes,Prozesse
-"Statemachine preview",Statusmaschinenvorschau
+"Statemachine preview","State machine Vorschau"
 "Total Price",Gesamtpreis
