--- a/src/Spryker/Permission/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/Permission/data/translation/Zed/de_DE.csv
@@ -1,1 +1,1 @@
-"Permission plugins have been synchronized","Plug-ins zur Berechtigung wurden synchronisiert"
+"Permission plugins have been synchronized","Berechtigungs-Plug-ins wurden synchronisiert"
