--- a/src/Spryker/ProductAttributeGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductAttributeGui/data/translation/Zed/de_DE.csv
@@ -1,4 +1,3 @@
-"Product Abstract Attributes Management","Verwaltung der abstrakten Projektattribute"
 "1. General Information","1. Allgemeine Informationen"
 "2. Translations","2. Übersetzungen"
 Add,Hinzufügen
@@ -9,26 +8,27 @@ Add,Hinzufügen
 "Attribute Key",Attributschlüssel
 "Attribute list",Attributliste
 "Attribute name translation","Übersetzung Attributnamen"
-"Attributes and their values are used by the backoffice application. They are unique and cannot contain special characters.","Attribute und ihre Werte werden von der Backoffice-Anwendung verwendet. Sie sind einmalig und dürfen keine Sonderzeichen enthalten."
+"Attributes and their values are used by the backoffice application. They are unique and cannot contain special characters.","Attribute und ihre Werte werden von der Backoffice Application verwendet. Sie sind einmalig und dürfen keine Sonderzeichen enthalten."
 Back,Zurück
 "Back to List","Zurück zu Liste"
 "Back to Product Abstract","Zurück zu Produktübersicht"
 "Back to Product List","Zurück zu Produktliste"
 "Create a Product Attribute","Produktattribut erstellen"
 "Create Product Attribute","Produktattribut erstellen"
-date,Datum
-datetime,Datum/Zeit
+date,date
+datetime,datetime
 Edit,Bearbeiten
 "Edit Product","Produkt bearbeiten"
 "Edit Product Abstract","Abstraktes Produkt bearbeiten"
-float,Float
+float,float
 "General Information","Allgemeine Informationen"
 "Input type",Eingabe-Typ
 "Manage Attributes for Product","Attribute für das Produkt verwalten"
 "Manage Attributes for Product Abstract","Attribute für abstraktes Produkt verwalten"
-number,Anzahl
+number,number
 "Predefined value translations","Vordefinierte Wertübersetzungen"
 "Predefined values","Vordefinierte Werte"
+"Product Abstract Attributes Management","Verwaltung der abstrakten Produktattribute"
 "Product abstract attributes saved","Attribute des abstrakten Produkts gespeichert"
 "Product attribute was created successfully.","Produktattribut wurde erfolgreich erstellt."
 "Product attribute was not created.","Produktattribut wurde nicht erstellt."
@@ -37,11 +37,11 @@ number,Anzahl
 "Product Attributes Management","Verwaltung der Produktattribute"
 "Product attributes saved","Produktattribute gespeichert"
 Save,Speichern
-select,auswählen
+select,select
 "Super attribute",Superattribute
-text,Text
-textarea,Textbereich
-time,Zeit
+text,text
+textarea,textarea
+time,time
 "Translate predefined values","Voreingestellte Werte übersetzen"
 "Translation was updated successfully.","Übersetzung wurde erfolgreich aktualisiert."
 "Type first three letters of an existing attribute key for suggestions.","Geben Sie die ersten drei Buchstaben eines bestehenden Attributschlüssels ein, um Vorschläge zu erhalten."
