--- a/src/Spryker/ProductListGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductListGui/data/translation/Zed/de_DE.csv
@@ -5,12 +5,12 @@
 Back,Zurück
 "Back to Product Lists","Zurück zu Produktlisten"
 Blacklist,"Schwarze Liste"
-"Business Unit Owner Name","Name des Business Unit-Inhabers"
+"Business Unit Owner Name","Name des Geschäftseinheiten-Inhabers"
 "Create a Product List","Produktliste erstellen"
 "Edit List","Liste bearbeiten"
 Export,Exportieren
 ID,ID
-"ID Merchant Relation","ID der Händlerrelation"
+"ID Merchant Relation","ID der Händlerbeziehung"
 "Import Product List","Produktliste importieren"
 "List of Product lists","Liste der Produktlisten"
 "Merchant Name",Händlername
@@ -21,7 +21,7 @@ Name,Name
 "Product List ""%s"" has been successfully created.","Produktliste ""%s"" wurde erfolgreich erstellt."
 "Product List ""%s"" has been successfully updated.","Produktliste ""%s"" wurde erfolgreich aktualisiert."
 "Product List has been successfully removed.","Produktliste wurde erfolgreich entfernt."
-"Product List removal confirmation","Entfernung der Produktliste bestätigt"
+"Product List removal confirmation","Löschen der Produktliste bestätigt"
 "Products in this list","Produkte in dieser Liste"
 "Remove List","Liste entfernen"
 Save,Speichern
