--- a/src/Spryker/ProductListGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/ProductListGui/data/translation/Zed/en_US.csv
@@ -21,7 +21,7 @@ Name,Name
 "Product List ""%s"" has been successfully created.","Product List ""%s"" has been successfully created."
 "Product List ""%s"" has been successfully updated.","Product List ""%s"" has been successfully updated."
 "Product List has been successfully removed.","Product List has been successfully removed."
-"Product List removal confirmation","Product List removal confirmation"
+"Product List removal confirmation","Product List was successfully removed"
 "Products in this list","Products in this list"
 "Remove List","Remove List"
 Save,Save
