--- a/src/Spryker/ProductRelation/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductRelation/data/translation/Zed/de_DE.csv
@@ -13,24 +13,24 @@ Edit,Bearbeiten
 "List Product relations","Liste der Produktbeziehungen"
 "Number of products","Anzahl der Produkte"
 "Please select product from the list below","Bitte wählen Sie ein Produkt aus der untenstehenden Liste aus"
-"Product relation successfully created","Produktrelation erfolgreich erstellt"
-"Product relation successfully modified","Produktrelation erfolgreich geändert"
-"Product relation with id ""%d"" not found.","Produktrelation mit der ID ""%d"" nicht gefunden"
-"Product relation with id ""%d"" not found.","Produktrelation mit der ID ""%d"" nicht gefunden"
+"Product relation successfully created","Produktbeziehung erfolgreich erstellt"
+"Product relation successfully modified","Produktbeziehung erfolgreich geändert"
+"Product relation with id ""%d"" not found.","Produktbeziehung mit der ID ""%d"" nicht gefunden"
+"Product relation with id ""%d"" not found.","Produktbeziehung mit der ID ""%d"" nicht gefunden"
 "Related products","Ähnliche Produkte"
-related-products,ähnliche-Produkte
-"Relation successfully activated.","Relation erfolgreich aktiviert."
-"Relation successfully deactivated.","Relation erfolgreich deaktiviert."
-"Relation successfully deleted.","Relation erfolgreich gelöscht."
-"Relation type",Relationsart
+related-products,"Ähnliche Produkte"
+"Relation successfully activated.","Beziehung erfolgreich aktiviert."
+"Relation successfully deactivated.","Beziehung erfolgreich deaktiviert."
+"Relation successfully deleted.","Beziehung erfolgreich gelöscht."
+"Relation type",Beziehungsart
 "Relation type:",Relationsart:
 Save,Speichern
-Select,auswählen
+Select,select
 "Select product","Produkt auswählen"
 "Selected product","Ausgewähltes Produkt"
-"Selected product already has ""%s"" relation type.","Das ausgewählte Produkt hat bereits Relationsart ""%s""."
+"Selected product already has ""%s"" relation type.","Das ausgewählte Produkt hat bereits Beziehungsart ""%s""."
 Sku:,Sku:
 up-selling,Upselling
-"Update regularly: When you have this selected, this product relation will be updated automatically on regular basis according to the relation's conditions.","Regelmäßig aktualisieren: Wenn dies eingestellt ist, wird diese Produktrelation gemäß der Relationsbedingungen regelmäßig automatisch aktualisiert."
+"Update regularly: When you have this selected, this product relation will be updated automatically on regular basis according to the relation's conditions.","Regelmäßig aktualisieren: Wenn dies eingestellt ist, wird diese Produktbeziehung gemäß der Beziehungsbedingungen regelmäßig automatisch aktualisiert."
 "View in Shop","Im Shop ansehen"
-"View relations","Relationen ansehen"
+"View relations","Beziehungen ansehen"
