--- a/src/Spryker/ProductRelation/data/translation/Zed/en_US.csv
+++ b/src/Spryker/ProductRelation/data/translation/Zed/en_US.csv
@@ -18,7 +18,7 @@ Edit,Edit
 "Product relation with id ""%d"" not found.","Product relation with id ""%d"" not found."
 "Product relation with id ""%d"" not found.","Product relation with id ""%d"" not found."
 "Related products","Related products"
-related-products,related-products
+related-products,"Related products"
 "Relation successfully activated.","Relation successfully activated."
 "Relation successfully deactivated.","Relation successfully deactivated."
 "Relation successfully deleted.","Relation successfully deleted."
@@ -30,7 +30,7 @@ Select,select
 "Selected product","Selected product"
 "Selected product already has ""%s"" relation type.","Selected product already has ""%s"" relation type."
 Sku:,Sku:
-up-selling,up-selling
+up-selling,Upselling
 "Update regularly: When you have this selected, this product relation will be updated automatically on regular basis according to the relation's conditions.","Update regularly: When you have this selected, this product relation will be updated automatically on regular basis according to the relation's conditions."
 "View in Shop","View in Shop"
 "View relations","View relations"
