--- a/src/Spryker/StateMachine/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/StateMachine/data/translation/Zed/de_DE.csv
@@ -1,4 +1,4 @@
 preview-version,Vorschau-Version
-"Processes for ""%s"" state machine","Prozesse für ""%s"" Statusmaschine"
-"State machine Processes",Statusmaschinenprozesse
-"State machines",Statusmaschinen
+"Processes for ""%s"" state machine","Prozesse für ""%s"" State Machine"
+"State machine Processes","State maschine Prozesse"
+"State machines","State machines"
