CC-2935: added missed translations.

--- a/src/Spryker/ProductListGui/data/translation/Zed/de_DE.csv
+++ b/src/Spryker/ProductListGui/data/translation/Zed/de_DE.csv
@@ -30,3 +30,4 @@ Selected,Ausgewählt
 SKU,SKU
 Type,Typ
 Whitelist,Whitelist
+"Product label #%d successfully created.","Produktetikett #% d wurde erfolgreich erstellt."
