--- a/src/Spryker/ProductListGui/data/translation/Zed/en_US.csv
+++ b/src/Spryker/ProductListGui/data/translation/Zed/en_US.csv
@@ -30,3 +30,4 @@ Selected,Selected
 SKU,SKU
 Type,Type
 Whitelist,Whitelist
+"Product label #%d successfully created.","Product label #%d successfully created."
