CMS-2200: Fixed translation, created translatable table items, changed button template, fixed js

--- a/data/translation/Zed/de_DE.csv
+++ b/data/translation/Zed/de_DE.csv
@@ -1,7 +1,10 @@
 "Abstract Product List","Abstract Product List"
+"content_product_abstract_list.template.default","Standard"
+"content_product_abstract_list.template.top-title","Titel oben"
 Actions,Actions
 "Add more products","Add more products"
 Delete,Delete
+Add to list,Add to list
 ID,ID
 Image,Image
 "Move Down","Move Down"
